# hello-grpc

./: .gitignore  Cargo.toml  README.md  build.rs  prototool.yaml
proto/: hello_api.proto
src/: client.rs  server.rs
