[package]
name = "hello-grpc"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "hello-server"
path = "src/server.rs"

[[bin]]
name = "hello-client"
path = "src/client.rs"

[dependencies]
tonic = "0.1"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.1.0"
